--- a/index.html
+++ b/index.html
@@ -1009,7 +1009,8 @@ html.cloud-search-mobile-open body {
   
   <meta name="description" content="¡PRECIO ESPECIAL! Compra en línea lo Mejor de FOX, Rodilleras FOX Titan Race al Mejor Precio, sólo en MOTOCITY STORE. Unitalla. Posi-Lock system.">
   
-  <link rel="stylesheet" href="panel-68b329d.css" media="all" data-lion-custom-css="panel"><link rel="stylesheet" href="default-7e31050-319384c.css" media="all" data-lion-css="default"><link rel="stylesheet" href="css.css" media="all"><link rel="canonical" href="https://motocity.mx/products/rodilleras-para-ninos-fox-titan-sport-youth">
+  <link rel="stylesheet" href="css.css" media="all">
+  <link rel="canonical" href="https://motocity.mx/products/rodilleras-para-ninos-fox-titan-sport-youth">
 
 
   <!-- CSS
@@ -1685,7 +1686,14 @@ html.cloud-search-mobile-open body {
 
 {% endcase %}
 
-</script><script src="globo.formbuilder.data.8541.js" type="text/javascript"></script><script src="globo.formbuilder.js" type="text/javascript"></script><script src="f-1.txt"></script><link rel="preload" as="script"><script id="boomr-scr-as" src="shopify-boomerang-1.0.0.min.js" async=""></script><script src="vendor-core-019f1ec.js"></script><script src="lion-core-e6ccd85.js"></script><script src="lion-app-integrated-d387570.js"></script><script src="jquery.min-1.js" type="text/javascript"></script><style type="text/css">
+</script>
+
+
+<link rel="preload" as="script">
+
+
+
+<style type="text/css">
 .tmenu-flex-row {
   -webkit-box-orient: horizontal !important;
   -webkit-box-direction: normal !important;
